--- a/css/style.css
+++ b/css/style.css
@@ -352,5 +352,11 @@ td{
 
 .Cata_Perso {
     margin-top: 15px;
+    font-family:"Segoe print", Arial, Helvetica, sans-serif;
+}
+
+
+.nav {
+    font-family:"Segoe print", Arial, Helvetica, sans-serif;
 }
 
